fix links disabled on mobile ?

--- a/src/DeepMikoto/ApiBundle/Resources/public/scss/deepmikotoapi.scss
+++ b/src/DeepMikoto/ApiBundle/Resources/public/scss/deepmikotoapi.scss
@@ -585,7 +585,7 @@ html {
             &>.scroll-indicator-container {
               bottom: 0;
               left: 0;
-              padding-bottom: 5px;
+              padding-bottom: 10px;
               .scroll-indicator {
                 height: 38px;
                 width: 25px;
